--- a/students/buzyl_nazar/final-project/package.json
+++ b/students/buzyl_nazar/final-project/package.json
@@ -28,8 +28,5 @@
         "sass": "^1.35.1",
         "webpack-stream": "^6.1.2"
     },
-    "dependencies": {
-        "jQuery": "^1.7.4",
-        "vue": "^2.6.14"
-    }
+    "dependencies": {}
 }
