--- a/students/buzyl_nazar/beetroot-layout/package.json
+++ b/students/buzyl_nazar/beetroot-layout/package.json
@@ -13,18 +13,23 @@
     "devDependencies": {
         "@babel/core": "^7.8.4",
         "@babel/preset-env": "^7.8.4",
+        "babel-loader": "^8.2.2",
         "browser-sync": "^2.23.7",
+        "core-js": "^3.15.2",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^5.0.0",
-        "gulp-babel": "^8.0.0",
         "gulp-cssnano": "^2.1.3",
-        "gulp-minify": "^3.1.0",
         "gulp-rename": "^2.0.0",
         "gulp-rigger": "^0.5.8",
-        "gulp-sass": "^4.1.0",
+        "gulp-sass": "^5.0.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-watch": "^5.0.0",
-        "node-sass": "^5.0.0"
+        "node-sass": "^5.0.0",
+        "sass": "^1.35.1",
+        "webpack-stream": "^6.1.2"
     },
-    "dependencies": {}
+    "dependencies": {
+        "jquery": "^3.6.0",
+        "vue": "^2.6.14"
+    }
 }
